fix header title spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,19 +12,26 @@ font-family: 'Marck Script', cursive;
  
  
  /* ------------------------------------------------------------Header */
-
+/*
  .heading {
-  margin-top: 15px;
-  padding: 0;
-  text-align: center;
- }
+   padding: 0;
+   margin: 0;
+   display: inline-block;
+  }
+  */
+  
+
 
  .sm-links {
   padding: 0;
   font-size: x-large;
   color: #cc5500;
-  margin-left: 25px;
+margin-top:20px;
  
+ }
+ 
+ .title {
+  text-align:center;
  }
 
  .title h1 {
@@ -40,20 +47,22 @@ font-family: 'Marck Script', cursive;
   font-size: 20px;
   font-weight: 200;
  }
- 
+
  .in-touch {
-     font-family: 'Exo 2', sans-serif;
-     text-align: right;
-     margin-right: 25px;
-    
-     
- }
+   padding: 0;  
+   text-align: right;
+
+     }
  
  .go-btn {
     color: #fff;
   background-color: #CC5500;
   border-color: #CC5500;
- }
+  font-family: 'Exo 2', sans-serif;
+  margin-top: 20px;
+  margin-right: 40px;
+ 
+    }
  
 
 
@@ -72,6 +81,7 @@ font-family: 'Marck Script', cursive;
 .nav-text {
  margin: auto;
  font-family: 'Exo 2', sans-serif;
+ text-align: center;
     }
   
 .container-fluid {
